<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txt_app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_ver_90"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="@+id/guideline_ver_10"
        app:layout_constraintTop_toTopOf="@+id/guideline_hor_10" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/edt_username"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/ic_person_outline_24dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_ver_90"
        app:layout_constraintStart_toStartOf="@+id/guideline_ver_10"
        app:layout_constraintTop_toTopOf="@+id/guideline_hor_40" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_hor_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/edt_password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_lock_outline_24dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_ver_90"
        app:layout_constraintStart_toStartOf="@+id/guideline_ver_10"
        app:layout_constraintTop_toBottomOf="@+id/edt_username" />

    <Switch
        android:id="@+id/switch_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline_ver_10"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_login"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline_ver_90"
        app:layout_constraintStart_toStartOf="@+id/guideline_ver_10"
        app:layout_constraintTop_toBottomOf="@+id/switch_remember_me" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_hor_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_ver_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_ver_90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/switch_remember_me"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/switch_remember_me"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

</android.support.constraint.ConstraintLayout>